...

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Set Time Limits",
                        maxLines = 1,
                        softWrap = false
                    )
                },
                navigationIcon = {
                    IconButton(onClick = onCancel) {
...
            }
            Spacer(modifier = Modifier.height(8.dp))
            OutlinedButton(onClick = {
                persistDraft()
                onEditApps()
            }, modifier = Modifier.fillMaxWidth()) {
                Text("Edit Selected Apps")
            }

            Spacer(modifier = Modifier.height(16.dp))
            HorizontalDivider(Modifier, DividerDefaults.Thickness, DividerDefaults.color)
            Spacer(modifier = Modifier.height(16.dp))

...
                    val min = timeMinLimit.value.toIntOrNull() ?: 0
                    if (useTimeLimit.value && hr == 0 && min == 0) {
                        showZeroTimeSaveWarning.value = true
                    } else {
                        doSave()
                    }
                }, modifier = Modifier.weight(1f)) { Text("Save") }
            }
        }

        if (showNoTimeLimitWarning.value) { AlertDialog(onDismissRequest = { showNoTimeLimitWarning.value = false; useTimeLimit.value = true }, title = { Text("Always Block App") }, text = { Text("Are you sure you want the app to be blocked with 0 time use?") }, confirmButton = { Button({ showNoTimeLimitWarning.value = false }) { Text("Continue") } }, dismissButton = { Button({ showNoTimeLimitWarn
        if (showZeroTimeSaveWarning.value) {
            AlertDialog(
...
